# t-route

./: .gitignore  Dockerfile.troute  Dockerfile.troute_api  LICENSE  README.md  TERMS.md  TechnicalQA.md  bmi_troute.py  build.sh  changelog.md  compiler.sh  compose.env  compose.yaml  contributing.md  install.md  pyproject.toml  pytest.ini  readme.md  requirements-app.txt  requirements.txt  run-troute-with-bmi.ipynb  run-troute-with-bmi.py  run_bmi_persistence_example.py  security.md
.github/: auto_assign-issues.yml
.github/workflows/: docker.yml  python-app.yml  ubuntu-latest.yml  ubuntu-unit-test.yml
.ipynb_checkpoints/: contributing-checkpoint.md
bmi_config_files/: LowerColorado.yml  standard_AnA.yml
doc/: AGU_Poster.md  git-workflow.ipynb  new-doc.ipynb  sample_config_MCOnly.yaml  sample_config_MC_with_waterbodies.yaml  v3_doc.yaml  v4_config_outline.yaml  v4_doc.yaml
doc/api/: api_docs.md
doc/docker/: dockerfile_notebook.md
doc/test/: integration_tests.md  unit_tests.md
doc/util/: gen_config_docs.py
docker/: Dockerfile.compose  Dockerfile.notebook  Dockerfile.troute  Dockerfile.troute_api  compose.yaml  rnr_compose.env  test_troute_api.env  troute.sh
notebooks/: DummyReach.ipynb  LR_NetCDF.ipynb  MESHpyReach.ipynb  NHD_Network_traversal.ipynb  NN4TuesdayPres-Copy9.ipynb  NNFullCombos.py  Network_Analysis_via_Parallelization_Demo.ipynb  Reach_Class_Structure_example_with_dummy_data.ipynb  SteadyReach.ipynb  USGS_DA_timing.ipynb  charts_NN.ipynb  chrtout_read_write.ipynb  compute-network-v2.ipynb  compute_nhd_routing_v2_clean.ipynb  compute_nhd_routing_v2_clean_with_lateral_inflow_data.ipynb  courant_test.ipynb  cython_colab_issue.ipynb  formatnb.py  initial_conditions_v2_routing.ipynb  mc-wave-routing-demo.ipynb  name-search-utility-demo.ipynb  network-analysis.ipynb  pocono1_warmstart_v2.ipynb  readme.md  usgs_da_timing_tests.ipynb
notebooks/NN/: NNFullCombos.py  NN_gen_predicted_values.py  NN_gen_training_data.py  NN_normalization.py  mc_sseg_stime_NOLOOP.py  nwm_single_segment.py
src/: bmi_DAforcing.py  bmi_df2array.py  bmi_reservoirs.py  bmi_troute.py  model.py  model_DAforcing.py  model_reservoir.py  run_bmi_persistence_RFC_example.py  run_bmi_persistence_example.py  run_reservoirs_with_bmi.ipynb  run_rfc_fortran_python.py  troute_model.py
src/app/: main.py  schemas.py
src/external_connections/: next_gen_io.py  next_gen_network.py
src/fortran_routing/: .gitignore
src/lookup_routing/: MCsingleSegStime_f2py_NOLOOP.f90  NNFullCombos.py  NN_argparse.py  NN_gen_predicted_values.py  NN_gen_training_data.py  NN_gen_val_data.py  NN_normalization.py  nwm_single_segment.py  readme lookup.md
src/troute-config/: pyproject.toml
src/troute-config/test/: __init__.py  conftest.py  test_config.py  test_types.py
src/troute-config/troute/config/: __init__.py  bmi_parameters.py  compute_parameters.py  config.py  logging_parameters.py  network_topology_parameters.py  output_parameters.py  typesConfig.py
src/troute-config/troute/config/config_classes/: _utils.py  bmi_parameters.py  compute_parameters.py  config.py  logging_parameters.py  network_topology_parameters.py  output_parameters.py  reservoir_data_assimilation_parameters.py  typesConfig.py
src/troute-network/: .gitignore  pyproject.toml  setup.py
src/troute-network/test/: conftest.py  make_test_network.py  test_compute_kernel.py  test_hyfeatures_network.py  test_nhd_network.py
src/troute-network/test/data/: flowpath_attributes.json  flowpath_edge_list.json  hy_network.gpkg  nex-4_output.csv
src/troute-network/tests/: make_test_network.py  test_HYFeaturesNetwork.py
src/troute-network/tests/data/: topology.yml
src/troute-network/troute/: AbstractNetwork.py  AbstractRouting.py  DataAssimilation.py  HYFeaturesNetwork.py  NHDNetwork.py  NHDNetwork_edited.py  NHDNetwork_v4.py  RoutingScheme.py  abstractnetwork_preprocess.py  bmi_array2df.py  bmi_utilities.py  hyfeature_network_utilities.py  hyfeature_preprocess.py  main_utilities.py  nhd_io.py  nhd_network.py  nhd_network_utilities_v02.py  nhd_preprocess.py  rfc_lake_gage_crosswalk.csv  rfc_lake_gage_crosswalk.py  test_HYFeaturesNetwork.py
src/troute-network/troute/network/: reach.pxd  reach.pyx
src/troute-network/troute/network/musking/: mc_reach.pxd  mc_reach.pyx  mc_reach_structs.c
src/troute-network/troute/network/reservoirs/hybrid/: hybrid.pyx
src/troute-network/troute/network/reservoirs/levelpool/: levelpool.pxd  levelpool.pyx  levelpool_structs.c
src/troute-network/troute/network/reservoirs/rfc/: rfc.pxd  rfc_structs.c
src/troute-nwm/: pyproject.toml  setup.cfg
src/troute-nwm/src/nwm_routing/: __init__.py  __main__.py  input.py  log_level_set.py  output.py  preprocess.py
src/troute-nwm/src/nwm_routing/.ipynb_checkpoints/: __main__-checkpoint.py  preprocess-checkpoint.py
test/: README.md  __init__.py  conftest.py  refactor_calibration.py  refactor_to_t-route.py  t-route_evaluation.sh
(+10444 files in other folders)
