[project]
name = "t-route"
authors = [
    {name = "DongHa Kim", email = "dongha.kim@noaa.gov"},
    {name = "Sean Horvath", email = "sean.horvath@noaa.gov"},
    {name = "Amin Torabi", email = "amin.torabi@noaa.gov"},
    {name = "Zach Jurgen", email = "jurgen.zach@noaa.gov"},
    {name = "Austin Raney", email = "austin.raney@noaa.gov"},
]
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
test = [
    "pytest==8.3.2",
    "bmipy==2.0.0",
]

jupyter = [
    "jupyterlab==3.6.7",
    "ipykernel==6.29.4",
]
