[metadata]
name=nwm_routing
author=Adam Wlostowski
author_email=adam.wlostowski@noaa.gov
description: Hydrologic and hydraulic routing for the U.S. National Water Model
url = https://github.com/NOAA-OWP/t-route
project_urls = 
    Bug Tracker = https://github.com/NOAA-OWP/t-route/issues


[options]
package_dir=
  =src
packages = find:
python_requires = >=3.6
install_requires=
  numpy
  Cython
  pandas>=1.1.5
  xarray
  netcdf4
  pyyaml
  toolz
  joblib

[options.packages.find]
 where=src
